Fixed the loading screen flicker

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,9 +50,3 @@
 /****************/
 /* STATE CHANGE */
 /****************/
-
-.app-container{ /* To hide the loader */
-  z-index: 1;
-  position: relative;
-  background-color: white; 
-}
